# wasm_plot

./: .gitignore  Cargo.toml  README.md  server.py
src/: main.rs
src/boxplot/: multiple_categories.rs
src/calendar/: heatmap_calendar.rs  simple_calendar.rs
src/line/: large_scale_area.rs  line_gradient.rs  stacked_line.rs
