[package]
name = "leptos_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charming = { version="0.4.0", features = ["wasm"] }
leptos = { version = "0.7.7", features = ["csr"] }
serde="1.0"
serde_json="1.0"
# used in rand, but we need to enable js feature
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
chrono="0.4"
lazy_static="1.5"
wasm-bindgen = "0.2.100"
