[package]
name = "leptos_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charming = { version="0.6.0", features = ["wasm"] }
leptos = { version = "0.8.2", features = ["csr"] }
serde="1.0"
serde_json="1.0"
getrandom = { version = "0.2", features = ["js"] }  # Changed from 0.3.3 to 0.2 with js feature
rand = { version = "0.8.5", features = ["small_rng"] }  # 将 rand 也降级到兼容版本
chrono="0.4"
lazy_static="1.5"

wasm-bindgen = "0.2.100"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.100"